<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/Day2Category1"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/POLE_SPORT_Children_6_9__amators_"
            android:textAllCaps="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:onClick="buttonClick"
            />
        <Button
            android:id="@+id/Day2Category2"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/POLE_SPORT_Children_6_9__halfpro"
            android:textAllCaps="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:onClick="buttonClick"
            />
        <Button
            android:id="@+id/Day2Category3"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/POLE_SPORT_children__6_9__pro"
            android:textAllCaps="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:onClick="buttonClick"
            />
        <Button
            android:id="@+id/Day2Category4"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/POLE_SPORT_children__10_13__amators"
            android:textAllCaps="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:onClick="buttonClick"
            />
        <Button
            android:id="@+id/Day2Category5"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/POLE_SPORT_children__10_13__halfpro"
            android:textAllCaps="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:onClick="buttonClick"
            />
        <Button
            android:id="@+id/Day2Category6"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/POLE_SPORT_children__10_13__pro"
            android:textAllCaps="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:onClick="buttonClick"
            />
        <Button
            android:id="@+id/Day2Category7"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/POLE_SPORT_Juniors__14_17__amators"
            android:textAllCaps="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:onClick="buttonClick"
            />
        <Button
            android:id="@+id/Day2Category8"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/POLE_SPORT_Juniors__14_17__halfpro"
            android:textAllCaps="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:onClick="buttonClick"
            />
        <Button
            android:id="@+id/Day2Category9"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/POLE_SPORT_Juniors__14_17__pro"
            android:textAllCaps="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:onClick="buttonClick"
            />
        <Button
            android:id="@+id/Day2Category10"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/POLE_ARTISTIC_SPORT__14_17__elit"
            android:textAllCaps="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:onClick="buttonClick"
            />
        <Button
            android:id="@+id/Day2Category11"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/POLE_SPORT_adult_female_category__18_34__amator"
            android:textAllCaps="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:onClick="buttonClick"
            />
        <Button
            android:id="@+id/Day2Category12"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/POLE_SPORT_adult_female_category__18_34__halfpr"
            android:textAllCaps="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:onClick="buttonClick"
            />
        <Button
            android:id="@+id/Day2Category13"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/POLE_SPORT_adult_female_category__18_34__pro"
            android:textAllCaps="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:onClick="buttonClick"
            />
        <Button
            android:id="@+id/Day2Category14"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/AERIALS_Children__6_9__amators"
            android:textAllCaps="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:onClick="buttonClick"
            />
        <Button
            android:id="@+id/Day2Category15"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/AERIALS_Children__6_9__halfpro"
            android:textAllCaps="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:onClick="buttonClick"
            />
        <Button
            android:id="@+id/Day2Category16"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/AERIALS_Children__6_9__pro"
            android:textAllCaps="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:onClick="buttonClick"
            />
        <Button
            android:id="@+id/Day2Category17"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/HOOP_Children_6_9__amators"
            android:textAllCaps="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:onClick="buttonClick"
            />
        <Button
            android:id="@+id/Day2Category18"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/HOOP_Children_6_9__halfpro"
            android:textAllCaps="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:onClick="buttonClick"
            />
        <Button
            android:id="@+id/Day2Category19"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/HOOP_Children_6_9__pro"
            android:textAllCaps="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:onClick="buttonClick"
            />
        <Button
            android:id="@+id/Day2Category20"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/AERIALS_Children__10_13__amators"
            android:textAllCaps="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:onClick="buttonClick"
            />
        <Button
            android:id="@+id/Day2Category21"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/AERIALS_Children__10_13__halfpro"
            android:textAllCaps="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:onClick="buttonClick"
            />
        <Button
            android:id="@+id/Day2Category22"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/AERIALS_Children__10_13__pro"
            android:textAllCaps="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:onClick="buttonClick"
            />
        <Button
            android:id="@+id/Day2Category23"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/HOOP_Children__10_13__amators"
            android:textAllCaps="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:onClick="buttonClick"
            />
        <Button
            android:id="@+id/Day2Category24"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/HOOP_Children__10_13__pro"
            android:textAllCaps="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:onClick="buttonClick"
            />
        <Button
            android:id="@+id/Day2Category25"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/GROUPS_AERIAL"
            android:textAllCaps="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:onClick="buttonClick"
            />
        <Button
            android:id="@+id/Day2Category26"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/AERIALS__14_17__amators"
            android:textAllCaps="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:onClick="buttonClick"
            />
        <Button
            android:id="@+id/Day2Category27"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/AERIALS__14_17__halfpro"
            android:textAllCaps="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:onClick="buttonClick"
            />
        <Button
            android:id="@+id/Day2Category28"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/AERIALS__14_17__pro"
            android:textAllCaps="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:onClick="buttonClick"
            />
        <Button
            android:id="@+id/Day2Category29"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/HOOP__14_17__amators"
            android:textAllCaps="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:onClick="buttonClick"
            />
        <Button
            android:id="@+id/Day2Category30"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/AERIALS__18_34__pro"
            android:textAllCaps="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:onClick="buttonClick"
            />
        <Button
            android:id="@+id/Day2Category31"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/HOOP__18_34__amators"
            android:textAllCaps="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:onClick="buttonClick"
            />
        <Button
            android:id="@+id/Day2Category32"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/HOOP__18_34__halfpro"
            android:textAllCaps="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:onClick="buttonClick"
            />
    </LinearLayout>


</ScrollView>