<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="true" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/formCategoryArtisticSport"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text = " Название Категории например летающие акробаты интернационалисты"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text = " Проверьте фамилию"

            />
        <TextView
            android:id="@+id/ArtisticSportSportsmenName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text = " Степанова Евклида Матвеевна"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#000000 "
            />
        <TextView
            android:layout_marginTop="14dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text = "@string/Artistic_question_emotions"
            />
        <RadioGroup
            android:id="@+id/radioArtisticSportEmotions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:button="@null"
                android:drawableBottom="@android:drawable/btn_radio"
                android:gravity="center"
                android:layout_weight="1"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2"
                android:button="@null"
                android:drawableBottom="@android:drawable/btn_radio"
                android:gravity="center"
                android:layout_weight="1"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3"
                android:button="@null"
                android:drawableBottom="@android:drawable/btn_radio"
                android:gravity="center"
                android:layout_weight="1"/>


            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4"
                android:button="@null"
                android:drawableBottom="@android:drawable/btn_radio"
                android:gravity="center"
                android:layout_weight="1"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5"
                android:button="@null"
                android:drawableBottom="@android:drawable/btn_radio"
                android:gravity="center"
                android:layout_weight="1"/>


        </RadioGroup>
        <TextView
            android:paddingTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text = "@string/Artistic_question_suit"
            />
        <RadioGroup
            android:id="@+id/radioArtisticSportSuit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:button="@null"
                android:drawableBottom="@android:drawable/btn_radio"
                android:gravity="center"
                android:layout_weight="1"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2"
                android:button="@null"
                android:drawableBottom="@android:drawable/btn_radio"
                android:gravity="center"
                android:layout_weight="1"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3"
                android:button="@null"
                android:drawableBottom="@android:drawable/btn_radio"
                android:gravity="center"
                android:layout_weight="1"/>


            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4"
                android:button="@null"
                android:drawableBottom="@android:drawable/btn_radio"
                android:gravity="center"
                android:layout_weight="1"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5"
                android:button="@null"
                android:drawableBottom="@android:drawable/btn_radio"
                android:gravity="center"
                android:layout_weight="1"/>

            />
        </RadioGroup>


        <TextView
            android:paddingTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text = "@string/Artistic_question_stage"
            />
        <RadioGroup
            android:id="@+id/radioArtisticSportStage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:button="@null"
                android:drawableBottom="@android:drawable/btn_radio"
                android:gravity="center"
                android:layout_weight="1"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2"
                android:button="@null"
                android:drawableBottom="@android:drawable/btn_radio"
                android:gravity="center"
                android:layout_weight="1"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3"
                android:button="@null"
                android:drawableBottom="@android:drawable/btn_radio"
                android:gravity="center"
                android:layout_weight="1"/>


            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4"
                android:button="@null"
                android:drawableBottom="@android:drawable/btn_radio"
                android:gravity="center"
                android:layout_weight="1"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5"
                android:button="@null"
                android:drawableBottom="@android:drawable/btn_radio"
                android:gravity="center"
                android:layout_weight="1"/>
        </RadioGroup>

        <EditText
            android:id="@+id/editArtisticSportComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/question_comments"
            android:layout_margin="8dp"/>
        <Button
            android:id="@+id/rangingLoadArtisticSport"
            android:background="@color/colorPrimary"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_gravity="end"
            android:layout_margin="8dp"
            />
    </LinearLayout>

</ScrollView>
